# neo4j-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
k8s/: deployment.yaml
src/neo4j_mcp/: __init__.py  db.py  server.py
tests/: test_server.py
