[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo4j-mcp"
version = "0.1.0"
description = "MCP server for Neo4j — abstract graph operations for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Alvaro Paco" }]
dependencies = [
    "mcp[cli]>=1.9.0",
    "neo4j>=5.26.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
neo4j-mcp = "neo4j_mcp.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"